# jobtrackr-backend

./: .gitignore  Cargo.toml  job.json  login.json  register.json
.sqlx/: query-1f8919c565299c7508a5700b43dccefc5220374e7bfee5ffcd9d5bba1239eabd.json  query-682d1200c3e1acc0696ed4fa31710a6af480d0ecee125abcfdbbb2f1f662bffb.json  query-c9ecfb9a11278f08aa63bd7170d8b676ea47cda7a8eee3cd6e6945e4a651f53e.json  query-ec8a127cfa1072d7688e4a3dfe703123f99682a1c68d5f7924c10fc5b07bef68.json
jobtrackr-frontend/: package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
jobtrackr-frontend/src/: App.tsx  index.css  main.tsx
jobtrackr-frontend/src/components/: NavBar.tsx  ProtectedRoute.tsx
jobtrackr-frontend/src/context/: AuthContext.tsx
jobtrackr-frontend/src/pages/: Dashboard.tsx  Login.tsx  NewApplication.tsx
src/: config.rs  main.rs
src/auth/: jwt.rs  middleware.rs
src/db/: connect.rs  job_applications.rs  mod.rs
src/models/: job_application.rs  mod.rs  user.rs
src/routes/: applications.rs  auth_routes.rs  mod.rs
