[package]
name = "jobtrackr"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
dotenvy = "0.15"
tower = "0.4"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
anyhow = "1.0"
thiserror = "1.0"
hyper = "1.0"
argon2 = "0.5"
rand_core = "0.6"     # Needed by argon2 for salt generation
tower-http = { version = "0.5", features = ["cors"] }
http = "0.2"



[package.metadata.sqlx]
offline = true


